--- a/AD340/app/src/main/res/values/strings.xml
+++ b/AD340/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AD340</string>
+    <string name="zipcode_entry_error">Please enter valid zipcode!</string>
 </resources>
